# alfons

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  get_deps.sh
cmake/: glm.cmake  linux.cmake  utils.cmake
demo/: CMakeLists.txt  basic.cpp  demoRenderer.h  enspiraling.cpp  glfwloop.h  spiral.h
src/: CMakeLists.txt
src/alfons/: alfons.cpp  alfons.h  appleFontFace.h  appleFontFace.mm  atlas.cpp  atlas.h  font.cpp  font.h  fontFace.cpp  fontFace.h  fontFace.mm  fontManager.cpp  fontManager.h  freetypeHelper.h  glyph.h  inputSource.h  langHelper.cpp  langHelper.h  lineLayout.h  lineWrap.cpp  lineWrap.h  quad.h  quadMatrix.cpp  quadMatrix.h  scrptrun.cpp  scrptrun.h  textBatch.cpp  textBatch.h  textRenderer.h  textShaper.cpp  textShaper.h  utils.h
src/alfons/appleFontConverter/: FontConverter.h  fontConverter.mm
src/alfons/path/: ASPC.h  lineSampler.cpp  lineSampler.h  mathUtils.cpp  mathUtils.h  splinePath.cpp  splinePath.h
src/alfons/renderer/: gl.h  renderer.cpp  renderer.h
src/logger/: logger.h
